# loom-loreweave-studio

./: .env  .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  README.md  models.json
.claude/: settings.json
.docs/: kb-loom-p0-imp.md  kb-loom-p0.md  kb-loom-p1-imp.md  kb-loom-p1.md  kb-loom-p2-imp.md  kb-loom-p2.md  kb-loom-p3.md  kb-loom-p4.md  kb-loom-p5.md  kb-loom-p6.md  kb-storyboard01.md  kb-tok-reduce-imp.md  kb-tok-reduce.md
.githooks/: pre-push
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
orchestrator/: __init__.py  assets.py  bible.py  components.py  config.py  coverage.py  diskguard.py  flux2_prompt.py  lineage.py  logsetup.py  main.py  model_catalog.py  postproc.py  projects.py  recipe.py  requirements.txt  runner.py  training.py  workspace.py
orchestrator/adapters/: __init__.py  _batch.py  base.py  birefnet.py  face_restore.py  flux2.py  frame_harvest.py  identity.py  krea2.py  ltxv.py  multi.py  sd35.py  zimage.py  zimage_trainer.py
orchestrator/schemas/: coverage_cell.schema.json  job.schema.json  lineage.schema.json  manifest.schema.json  postproc_store.schema.json  profile.schema.json  project.schema.json  queue.schema.json  story.schema.json  version.schema.json
orchestrator/tests/: conftest.py  test_acceptance.py  test_batch_worker.py  test_birefnet_matting.py  test_casting.py  test_curation.py  (+28 more)
trainers/: loom_zimage_lora.py
(+79 files in other folders)
