[package]
name = "loreweave-studio"
version = "0.0.1"
description = "Loreweave Studio (loom) desktop shell"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "loreweave_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
